Adds inactive class for stifling mouse events on otherwise hidden items.

--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -33,6 +33,9 @@ html {
               align-content: center;
               background-size: cover;
               position: absolute;
+              &.inactive{
+                pointer-events: none;
+              }
             }
 
           }
