--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -21,7 +21,7 @@ html {
             padding: 0;
             margin: 0;
             list-style: none;
-            li {
+            li.slide {
               width: 100vw;
               height: 100vh;
               display: flex;
@@ -31,6 +31,9 @@ html {
               align-content: center;
               background-size: cover;
               position: absolute;
+              a{
+                color: white;
+              }
               &.inactive{
                 pointer-events: none;
               }
@@ -68,6 +71,29 @@ html {
         height: 40px;
         cursor: pointer;
         opacity: 0.2;
+      }
+    }
+    div#overlay{
+      background-color: black;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      z-index:100;
+      a.overlay__close{
+        text-indent:-10000px;
+        position: absolute;
+        top: 40px;
+        display: block;
+        width: 40px;
+        height: 40px;
+        background: url(../img/close-x.svg);
       }
     }
 
