--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -1,62 +1,53 @@
 @import "_shared";
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
 html {
   body {
     font-family: 'Montserrat', sans-serif;
     height: 100%;
     width: 100%;
     overflow: auto;
-    -webkit-overflow-scrolling:touch;
-    background-color: black;
-    color: white;
+    -webkit-overflow-scrolling: touch;
+    color: black;
     padding: 0;
     margin: 0;
     div#content {
       position: relative;
-      section{
-        &.slide-show-container{
+      &:not(.slide-show-active){
+        section.slide-show-container{
+          pointer-events: none;
+        }
+      }
+      section {
+        background: white;
+        height: 100vh;
+        &.slide-show-container {
           width: 100vw;
           height: 100vh;
-          ul.slide-show {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-            li.slide {
-              width: 100vw;
-              height: 100vh;
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              align-items: center;
-              align-content: center;
-              background-size: cover;
-              position: absolute;
-              a{
-                color: white;
-              }
-              &.inactive{
-                pointer-events: none;
-              }
-            }
+          background-color: black;
 
-          }
         }
-        &:not(.slide-show-container){
+
+        &:not(.slide-show-container) {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-content: center;
+          align-items: center;
           @include media-desktop {
-            background-color: transparent;
             max-width: $desktop;
             margin-left: auto;
             margin-right: auto;
           }
         }
-        &:last-of-type{
+        &:last-of-type {
           margin: 0 auto 75px auto;
         }
       }
       &.slide-show-active {
         position: fixed;
         top: 0;
-        section:not(.slide-show-container){
+        section:not(.slide-show-container) {
           position: absolute;
           right: 0;
         }
@@ -73,7 +64,7 @@ html {
         opacity: 0.2;
       }
     }
-    div#overlay{
+    div#overlay {
       background-color: black;
       position: fixed;
       top: 0;
@@ -85,9 +76,9 @@ html {
       justify-content: center;
       align-items: center;
       color: white;
-      z-index:100;
-      a.overlay__close{
-        text-indent:-10000px;
+      z-index: 100;
+      a.overlay__close {
+        text-indent: -10000px;
         position: absolute;
         top: 40px;
         display: block;
@@ -100,14 +91,78 @@ html {
   }
 }
 
-.ambiveo {
-  object-fit: cover;
-  transform: translate3d(-50%, -50%, 0);
-  position: absolute;
-  top: calc(50% - 1px);
-  left: calc(50% - 1px);
-  min-width: calc(100% + 2px);
-  min-height: calc(100% + 2px);
-  width: 100%;
-  height: auto;
+#slideShowWrapper {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  color: white;
+  ul.slide-show {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    li.slide{
+      width: 100vw;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+      position: fixed;
+      .slide__background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center center;
+      }
+      .slide__copy{
+        font-size:40px;
+        text-transform: uppercase;
+        z-index:1;
+        text-align: center;
+        position: relative;
+        cursor: pointer;
+        .slide__watchNow{
+          position: absolute;
+          top: 50%;
+          left: 0;
+          right: 0;
+          margin-top: -24px;
+          opacity: 0;
+        }
+        .slide__description{
+          opacity: 1;
+          p{
+            padding: 0;
+            margin: 0;
+          }
+        }
+        &:hover{
+          .slide__watchNow{
+            opacity: 1;
+          }
+          .slide__description{
+            opacity: 0;
+          }
+        }
+      }
+    }
+  }
 }
+
+.ambiveo {
+    object-fit: cover;
+    transform: translate3d(-50%, -50%, 0);
+    position: absolute;
+    top: calc(50% - 1px);
+    left: calc(50% - 1px);
+    min-width: calc(100% + 2px);
+    min-height: calc(100% + 2px);
+    width: 100%;
+    height: auto;
+  }
