--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -11,45 +11,61 @@ html {
     color: black;
     padding: 0;
     margin: 0;
-    div#content {
-      position: relative;
-      &:not(.slide-show-active){
-        section.slide-show-container{
-          pointer-events: none;
+    .dark {
+      fill: black;
+    }
+    .light {
+      fill: white;
+    }
+    &.no-scroll {
+      overflow: hidden;
+    }
+    &.below-the-fold {
+      #southern-reel__hamburger, #southern-reel__logo {
+        fill: black;
+        &:hover {
+          fill: red;
         }
       }
+    }
+    div#content {
+      position: relative;
       section {
         background: white;
-        height: 100vh;
-        &.slide-show-container {
-          width: 100vw;
-          height: 100vh;
-          background-color: black;
-
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        padding: 0 20px;
+        &.slide-show__container {
+          padding: 0;
         }
-
-        &:not(.slide-show-container) {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-content: center;
-          align-items: center;
-          @include media-desktop {
-            max-width: $desktop;
-            margin-left: auto;
-            margin-right: auto;
-          }
+        @include media-xl {
+          padding: 0;
+        }
+        @include media-desktop {
+          max-width: $desktop;
+          margin-left: auto;
+          margin-right: auto;
+        }
+        .slide-show__iframe {
+          overflow: hidden;
         }
         &:last-of-type {
           margin: 0 auto 75px auto;
         }
       }
-      &.slide-show-active {
-        position: fixed;
-        top: 0;
-        section:not(.slide-show-container) {
-          position: absolute;
-          right: 0;
+      &.slide-show--active {
+        .slide-show__container {
+          top: 0;
+          left: 0;
+          width: 100vw;
+          height: 100vh;
+        }
+        section:not(.slide-show__container) {
+
         }
       }
       div#back-to-top {
@@ -62,6 +78,11 @@ html {
         height: 40px;
         cursor: pointer;
         opacity: 0.2;
+      }
+      .slide-show__iframe {
+        width: 100vw;
+        height: 100vh;
+        border: none;
       }
     }
     div#overlay {
@@ -87,75 +108,143 @@ html {
         background: url(../img/close-x.svg);
       }
     }
-
   }
 }
 
-#slideShowWrapper {
+#mobile-gallery {
+  width: 100vw;
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  color: white;
-  ul.slide-show {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    li.slide{
-      width: 100vw;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-content: center;
-      align-items: center;
-      position: fixed;
-      .slide__background {
+  li {
+    height: 100vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+  }
+  .mobile-gallery {
+    &--slide {
+      &__background {
         position: absolute;
+        background-size: cover;
+        background-position: center center;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-size: cover;
-        background-position: center center;
       }
-      .slide__copy{
-        font-size:40px;
+      &__copy {
+        color: white;
+        font-size: 40px;
         text-transform: uppercase;
-        z-index:1;
+        z-index: 1;
         text-align: center;
         position: relative;
         cursor: pointer;
-        .slide__watchNow{
-          position: absolute;
-          top: 50%;
-          left: 0;
-          right: 0;
-          margin-top: -24px;
-          opacity: 0;
-        }
-        .slide__description{
-          opacity: 1;
-          p{
-            padding: 0;
-            margin: 0;
-          }
-        }
-        &:hover{
-          .slide__watchNow{
+        &:hover {
+          .mobile-gallery--slide__watchNow{
             opacity: 1;
           }
-          .slide__description{
+          .mobile-gallery--slide__description{
             opacity: 0;
           }
+        }
+      }
+      &__watchNow {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        right: 0;
+        margin-top: -24px;
+        opacity: 0;
+      }
+      &__description {
+        opacity: 1;
+        p {
+          padding: 0;
+          margin: 0;
         }
       }
     }
   }
 }
+  #slideShowWrapper {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
+    color: white;
+    ul.slide-show {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      li.slide {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        .slide__background {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-position: center center;
+        }
+        .slide__copy {
+          font-size: 40px;
+          text-transform: uppercase;
+          z-index: 1;
+          text-align: center;
+          position: relative;
+          cursor: pointer;
+          .slide__watchNow {
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            margin-top: -24px;
+            opacity: 0;
+          }
+          .slide__description {
+            opacity: 1;
+            p {
+              padding: 0;
+              margin: 0;
+            }
+          }
+          &:hover {
+            .slide__watchNow {
+              opacity: 1;
+            }
+            .slide__description {
+              opacity: 0;
+            }
+          }
+        }
+      }
+    }
+    &.is-mobile {
+      height: auto;
+      overflow: hidden;
+      ul.slide-show {
+        height: auto;
+        li.slide {
+          position: relative;
+        }
+      }
+    }
+  }
 
-.ambiveo {
+  .ambiveo {
     object-fit: cover;
     transform: translate3d(-50%, -50%, 0);
     position: absolute;
