--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,7 +2,7 @@
 
 footer {
   width: 100%;
-  background-color: $dark;
+  background-color: rgba(0,0,0,0.8);
   color: white;
   font-size: 0.8rem;
   padding: 0 20px;
@@ -12,6 +12,8 @@ footer {
   bottom: 0;
   .footer {
     &__container {
+      font-weight: bold;
+      text-transform: uppercase;
       @include media-desktop {
         max-width: $desktop;
         margin: 0 auto;
