--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -8,7 +8,8 @@ html {
     width: 100%;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    color: black;
+    color: $ink;
+    background-color: $light;
     padding: 0;
     margin: 0;
     .dark {
@@ -31,14 +32,23 @@ html {
     div#content {
       position: relative;
       section {
-        background: white;
         min-height: 100vh;
+        background: transparent;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-content: center;
         align-items: center;
-        padding: 0 20px;
+        h2, h3{
+          letter-spacing: 5px;
+          text-transform: uppercase;
+          margin: 40px auto 30px auto;
+          font-size: 18px;
+          font-weight: 700;
+        }
+        h3{
+          font-size: 16px;
+        }
         &.slide-show__container {
           padding: 0;
         }
@@ -85,6 +95,285 @@ html {
         border: none;
       }
     }
+    #Video{
+      iframe#slide-show-iframe {
+        -webkit-transition: background-color 0.5s, -webkit-transform 0.5s;
+        transition: background-color 0.5s, transform 0.5s;
+        &.active {
+          background-color: black;
+        }
+      }
+    }
+    #Photography{
+      .photo-carousel{
+        &__container{
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+          position: relative;
+        }
+        &__control{
+          height: 40px;
+          width: auto;
+          -webkit-transition: opacity 0.5s -webkit-transform 0.5s;
+          transition: opacity 0.5s, transform 0.5s;
+          &:hover{
+            cursor: pointer;
+            opacity: 1;
+          }
+          &--prev{
+            -webkit-transform: rotate(180deg);     /* Chrome and other webkit browsers */
+            -moz-transform: rotate(180deg);        /* FF */
+            -o-transform: rotate(180deg);          /* Opera */
+            -ms-transform: rotate(180deg);         /* IE9 */
+            transform: rotate(180deg);             /* W3C compliant browsers */
+            /* IE8 and below */
+            filter: progid:DXImageTransform.Microsoft.Matrix(M11=-1, M12=0, M21=0, M22=-1, DX=0, DY=0, SizingMethod='auto expand');
+            position: absolute;
+            left: 16px;
+            z-index:2;
+            fill: white;
+            opacity: 0.2;
+            &:hover{
+              opacity: 1;
+            }
+            @include media-xl{
+              margin: 0 20px 0 0;
+              position: relative;
+              left: inherit;
+              opacity: 1;
+              fill: black;
+            }
+          }
+          &--next{
+            position: absolute;
+            right: 16px;
+            z-index:2;
+            fill: white;
+            opacity: 0.2;
+            @include media-xl{
+              margin: 0 0 0 20px;
+              position: relative;
+              right: inherit;
+              opacity: 1;
+              fill: black;
+            }
+          }
+        }
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 1300px;
+
+        .photo-carousel__item{
+          .photo-carousel__image{
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+    }
+    #About {
+      .about__logo {
+        width: 86px;
+        height: auto;
+      }
+      .about__description {
+        margin: 28px auto 12px auto;
+        text-align: center;
+      }
+      position: relative;
+      .crawl__container {
+        width: 175px;
+        margin: 0 auto 40px auto;
+        position: relative;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        overflow-y: hidden;
+        &__background {
+          position: absolute;
+          left: 0;
+          top: -21px;
+          right: 0;
+          bottom: -21px;
+          -webkit-box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.23);
+          -moz-box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.23);
+          box-shadow: inset 0px 0px 20px 0px rgba(0, 0, 0, 0.23);
+        }
+      }
+      .crawl {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        left: 50%;
+        top: 30px;
+        li {
+          text-transform: uppercase;
+          padding: 0 20px;
+          position: relative;
+          -webkit-transition: opacity 0.5s, margin-left 0.5s, filter 0.5s, -webkit-transform 0.5s;
+          transition: opacity 0.5s, margin-left 0.5s, filter 0.5s, transform 0.5s;
+          white-space: nowrap;
+          &.blurred {
+            filter: blur(5px);
+          }
+          &.active {
+
+          }
+          &.inactive {
+            opacity: 0.4;
+          }
+        }
+      }
+      .about__item{
+        border-top: 1px solid black;
+        &:first-of-type{
+          margin: 40px auto 0 auto;
+        }
+        &--title{
+          text-transform: uppercase;
+          margin: 0;
+          padding: 0 0 30px;
+        }
+        &--copy{
+          p{
+            margin: 0;
+            padding: 0 0 30px 0;
+          }
+        }
+        @include media-tablet-portrait{
+          padding: 40px 0 0 0;
+          width: 100%;
+          max-width: $tabPort;
+        };
+      }
+    }
+    #OurTeam {
+      .team-members {
+        width: 100%;
+        max-width: 785px;
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-direction: row;
+        flex-flow: wrap;
+        justify-content: center;
+        align-items: flex-start;
+        border-top: 1px solid black;
+        padding: 40px 0 0;
+        li {
+          text-align: center;
+          width: 100%;
+          @include media-mobile{
+            width: 50%;
+          }
+          @include media-small{
+            width: 50%;
+          }
+          @include media-tablet-portrait{
+            width: 33.3%;
+          }
+          margin: 0 0 80px;
+          .team-member {
+            &__name {
+              font-size: 18px;
+              font-weight: 700;
+              letter-spacing: 1px;
+              text-transform: uppercase;
+            }
+            &__title {
+              font-size: 14px;
+              line-height: initial;
+              letter-spacing: 1px;
+              margin: 9px 0 0 0;
+            }
+          }
+        }
+      }
+    }
+    #Contact{
+      .contact{
+        &__telephone{
+          a{
+            text-decoration: none;
+            color: $ink;
+            &:visited{
+
+            }
+            &:active{
+
+            }
+          }
+        }
+        &__map{
+          a{
+            font-weight: 700;
+            text-decoration: none;
+            color: $ink;
+            &:visited{
+
+            }
+            &:active{
+
+            }
+          }
+        }
+        &__social{
+          list-style: none;
+          margin: 60px auto 0 auto;
+          padding: 0;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          li{
+            text-indent: -10000px;
+            &:not(:last-of-type){
+              margin: 0 20px 0 0;
+            }
+            a{
+              display: block;
+              width: 44px;
+              height: 44px;
+              border: 1px solid black;
+              -webkit-transition: border 0.75s; /* Safari */
+              transition: border 0.75s;
+              &:hover{
+                border: 2px solid #333333;
+              }
+              &.contact__social--{
+                &facebook{
+                  background: url(../img/social-facebook.svg);
+                }
+                &instagram{
+                  background: url(../img/social-instagram.svg);
+                }
+                &vimeo{
+                  background: url(../img/social-vimeo.svg);
+                }
+                &twitter{
+                  background: url(../img/social-twitter.svg);
+                }
+              }
+            }
+          }
+        }
+
+
+
+
+
+      }
+    }
     div#overlay {
       background-color: black;
       position: fixed;
@@ -107,76 +396,17 @@ html {
         height: 40px;
         background: url(../img/close-x.svg);
       }
-      .video-description{
-        position: absolute;
+      .video-description {
         width: 80%;
-        bottom: 20px;
-        left: 10%;
+        margin: 20px auto 0 auto;
         text-align: center;
         text-transform: uppercase;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        .video__title{
+        .video__title {
           font-size: 24px;
         }
-        .video__subtitle{
+        .video__subtitle {
           font-size: 18px;
-        }
-      }
-    }
-    iframe#slide-show-iframe{
-      -webkit-transition: background-color 0.5s, -webkit-transform 0.5s;
-      transition: background-color 0.5s, transform 0.5s;
-      &.active{
-        background-color: black;
-      }
-    }
-    #About{
-      .about__logo{
-        width: 86px;
-        height: auto;
-      }
-      .about__description{
-        margin: 28px auto 12px auto;
-        text-align: center;
-      }
-      position: relative;
-      .crawl__container{
-        position: relative;
-        height: 60px;
-      }
-      .crawl{
-        position: absolute;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-        left: 50%;
-        li{
-          text-transform: uppercase;
-          padding: 0 20px;
-          position: relative;
-          overflow-y: hidden;
-          -webkit-transition: opacity 0.5s, margin-left 0.5s, -webkit-transform 0.5s;
-          transition: opacity 0.5s, margin-left 0.5s, transform 0.5s;
-          white-space: nowrap;
-          &.active{
-
-          }
-          &.inactive{
-            opacity: 0.4;
-          }
-          .crawl__background{
-            position: absolute;
-            left: 0;
-            top: -21px;
-            right: 0;
-            bottom: -21px;
-            -webkit-box-shadow: inset 2px 0px 20px 0px rgba(0,0,0,0.43);
-            -moz-box-shadow: inset 2px 0px 20px 0px rgba(0,0,0,0.43);
-            box-shadow: inset 2px 0px 20px 0px rgba(0,0,0,0.43);
-          }
+          margin: 10px 0 0 0;
         }
       }
     }
@@ -216,10 +446,10 @@ html {
         position: relative;
         cursor: pointer;
         &:hover {
-          .mobile-gallery--slide__watchNow{
+          .mobile-gallery--slide__watchNow {
             opacity: 1;
           }
-          .mobile-gallery--slide__description{
+          .mobile-gallery--slide__description {
             opacity: 0;
           }
         }
@@ -242,87 +472,89 @@ html {
     }
   }
 }
-  #slideShowWrapper {
+
+#slideShowWrapper {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  color: white;
+  ul.slide-show {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: black;
-    color: white;
-    ul.slide-show {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      li.slide {
-        width: 100vw;
-        height: 100vh;
-        position: fixed;
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        align-items: center;
-        .slide__background {
+    li.slide {
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      display: flex;
+      justify-content: center;
+      align-content: center;
+      align-items: center;
+      .slide__background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center center;
+      }
+      .slide__copy {
+        font-size: 40px;
+        text-transform: uppercase;
+        z-index: 1;
+        text-align: center;
+        position: relative;
+        cursor: pointer;
+        .slide__watchNow {
           position: absolute;
-          top: 0;
+          top: 50%;
           left: 0;
-          width: 100%;
-          height: 100%;
-          background-size: cover;
-          background-position: center center;
+          right: 0;
+          margin-top: -24px;
+          opacity: 0;
         }
-        .slide__copy {
-          font-size: 40px;
-          text-transform: uppercase;
-          z-index: 1;
-          text-align: center;
-          position: relative;
-          cursor: pointer;
+        .slide__description {
+          opacity: 1;
+          p {
+            padding: 0;
+            margin: 0;
+          }
+        }
+        &:hover {
           .slide__watchNow {
-            position: absolute;
-            top: 50%;
-            left: 0;
-            right: 0;
-            margin-top: -24px;
-            opacity: 0;
+            opacity: 1;
           }
           .slide__description {
-            opacity: 1;
-            p {
-              padding: 0;
-              margin: 0;
-            }
+            opacity: 0;
           }
-          &:hover {
-            .slide__watchNow {
-              opacity: 1;
-            }
-            .slide__description {
-              opacity: 0;
-            }
-          }
-        }
-      }
-    }
-    &.is-mobile {
-      height: auto;
-      overflow: hidden;
-      ul.slide-show {
-        height: auto;
-        li.slide {
-          position: relative;
         }
       }
     }
   }
-  .ambiveo {
-    object-fit: cover;
-    transform: translate3d(-50%, -50%, 0);
-    position: absolute;
-    top: calc(50% - 1px);
-    left: calc(50% - 1px);
-    min-width: calc(100% + 2px);
-    min-height: calc(100% + 2px);
-    width: 100%;
+  &.is-mobile {
     height: auto;
+    overflow: hidden;
+    ul.slide-show {
+      height: auto;
+      li.slide {
+        position: relative;
+      }
+    }
   }
+}
+
+.ambiveo {
+  object-fit: cover;
+  transform: translate3d(-50%, -50%, 0);
+  position: absolute;
+  top: calc(50% - 1px);
+  left: calc(50% - 1px);
+  min-width: calc(100% + 2px);
+  min-height: calc(100% + 2px);
+  width: 100%;
+  height: auto;
+}
