--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,5 +1,11 @@
 @import "_shared";
 
+body.below-the-fold{
+  header nav.headerNav{
+    background-color: $light;
+    padding-bottom: 40px;
+  }
+}
 header {
   position: fixed;
   top: 0;
@@ -16,6 +22,8 @@ header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    -webkit-transition: background-color 2s, padding-bottom 2s; /* Safari */
+    transition: background-color 2s, padding-bottom 2s;
     path{
       -webkit-transition: fill 2s; /* Safari */
       transition: fill 2s;
