--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,6 +6,12 @@ body.below-the-fold{
     padding-bottom: 40px;
   }
 }
+body.menu-open{
+  header nav.headerNav{
+    background-color: transparent;
+    padding-bottom: 0;
+  }
+}
 header {
   position: fixed;
   top: 0;
@@ -63,7 +69,7 @@ header {
   nav.headerMenu{
     // opacity: 0;
     height: 100vh;
-    background-color: white;
+    background-color: $light;
     width: 100vw;
     position: fixed;
     top: 0;
