--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -112,19 +112,29 @@ html {
         li.photo-carousel__item{
           display: flex;
           justify-content: center;
+          align-items: center;
+          align-content:center;
           height: calc(100vh - 150px);
-          width: auto;
+          width: 100%;
+          max-width: 100vw;
           opacity: 0;
+          position: absolute;
+          margin: 0 auto;
           -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
           transition: opacity 0.5s, transform 0.5s;
+
+          background-size: contain;
+          background-position: center center;
+          background-repeat: no-repeat;
+
           &.active{
             opacity: 1;
           }
           .photo-carousel__image{
-            position: absolute;
-            top: 0;
-            height: 100%;
+            height: auto;
             width: auto;
+            max-width: 100vw;
+            position: relative;
           }
         }
         &__container{
