--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,167 +1,179 @@
 @import "_shared";
 
-body.below-the-fold{
-  header nav.headerNav{
-    background-color: $light;
-    padding-bottom: 40px;
-  }
-}
-body.menu-open{
-  header nav.headerNav{
-    background-color: transparent;
-    padding-bottom: 0;
-  }
-}
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 60px;
-  width: 100%;
-  z-index:10;
-  nav.headerNav{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    -webkit-transition: background-color 2s, padding-bottom 2s; /* Safari */
-    transition: background-color 2s, padding-bottom 2s;
-    path{
-      -webkit-transition: fill 2s; /* Safari */
-      transition: fill 2s;
-    }
-    .headerHamburger{
-      #header__close{
-        display: none;
-
-      }
-    }
-    .headerClose{
-      #header__hamburger{
-        display: none;
-      }
-    }
-    .viewControl{
-      height: 30px;
-      width: auto;
-      margin: 20px 0 0 20px;
-      @include media-small{
-        height: 40px;
-        margin: 45px 0 0 50px;
-      }
-      cursor: pointer;
-    }
-    .headerLogo{
-      height: 30px;
-      width: auto;
-      margin: 20px 20px 0 0;
-      @include media-small{
-        height: 40px;
-        margin: 45px 50px 0 0;
-      }
-      cursor: pointer;
-    }
-  }
-  nav.headerMenu{
-    // opacity: 0;
-    height: 100vh;
-    background-color: $light;
-    width: 100vw;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    overflow-y: scroll;
-    border-bottom:2px solid black;
-    box-shadow:0 10px 50px 20px rgba(0,0,0,0.5);
-    .headerMenu__choices{
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      & > li{
-        margin: 0 auto;
-        text-align: center;
-        &:not(:last-of-type){
-          margin: 0 0 20px 0;
-          @include media-small{
-            margin: 0 0 44px 0;
-          }
-        }
-        a{
-          font-size: 26px;
-          text-transform: uppercase;
-          color: black;
-          text-decoration: none;
-          -webkit-transition: font-size 0.5s; /* Safari */
-          transition: font-size 0.5s;
-          &:hover{
-            font-size:28px;
-          }
-        }
-      }
-      .headerMenu__social{
-        list-style: none;
-        margin: 0 auto;
-        padding: 0;
+html {
+  body {
+    header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 60px;
+      width: 100%;
+      z-index: 10;
+      nav.headerNav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100vw;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        li{
-          text-indent: -10000px;
-          &:not(:last-of-type){
-            margin: 0 20px 0 0;
+        align-items: center;
+        -webkit-transition: background-color 2s, padding-bottom 2s; /* Safari */
+        transition: background-color 2s, padding-bottom 2s;
+        path {
+          -webkit-transition: fill 2s; /* Safari */
+          transition: fill 2s;
+        }
+        .headerHamburger {
+          #header__close {
+            display: none;
+
           }
-          a{
-            display: block;
-            width: 44px;
-            height: 44px;
-            border: 1px solid black;
-            -webkit-transition: border 0.75s; /* Safari */
-            transition: border 0.75s;
-            &:hover{
-              border: 2px solid #333333;
+        }
+        .headerClose {
+          #header__hamburger {
+            display: none;
+          }
+        }
+        .viewControl {
+          height: 30px;
+          width: auto;
+          margin: 20px 0 0 20px;
+          @include media-small {
+            height: 40px;
+            margin: 45px 0 0 50px;
+          }
+          cursor: pointer;
+        }
+        .headerLogo {
+          height: 30px;
+          width: auto;
+          margin: 20px 20px 0 0;
+          @include media-small {
+            height: 40px;
+            margin: 45px 50px 0 0;
+          }
+          cursor: pointer;
+        }
+      }
+      nav.headerMenu {
+        // opacity: 0;
+        height: 100vh;
+        background-color: $light;
+        width: 100vw;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow-y: scroll;
+        border-bottom: 2px solid black;
+        box-shadow: 0 10px 50px 20px rgba(0, 0, 0, 0.5);
+        .headerMenu__choices {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+          display: flex;
+          flex-direction: column;
+          & > li {
+            margin: 0 auto;
+            text-align: center;
+            &:not(:last-of-type) {
+              margin: 0 0 20px 0;
+              @include media-small {
+                margin: 0 0 44px 0;
+              }
             }
-            &.headerMenu__social--{
-              &facebook{
-                background: url(../img/social-facebook.svg);
+            a {
+              font-size: 26px;
+              text-transform: uppercase;
+              color: black;
+              text-decoration: none;
+              -webkit-transition: font-size 0.5s; /* Safari */
+              transition: font-size 0.5s;
+              &:hover {
+                font-size: 28px;
               }
-              &instagram{
-                background: url(../img/social-instagram.svg);
+            }
+          }
+          .headerMenu__social {
+            list-style: none;
+            margin: 0 auto;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            li {
+              text-indent: -10000px;
+              &:not(:last-of-type) {
+                margin: 0 20px 0 0;
               }
-              &vimeo{
-                background: url(../img/social-vimeo.svg);
-              }
-              &twitter{
-                background: url(../img/social-twitter.svg);
+              a {
+                display: block;
+                width: 44px;
+                height: 44px;
+                border: 1px solid black;
+                -webkit-transition: border 0.75s; /* Safari */
+                transition: border 0.75s;
+                &:hover {
+                  border: 2px solid #333333;
+                }
+                &.headerMenu__social-- {
+                  &facebook {
+                    background: url(../img/social-facebook.svg);
+                  }
+                  &instagram {
+                    background: url(../img/social-instagram.svg);
+                  }
+                  &vimeo {
+                    background: url(../img/social-vimeo.svg);
+                  }
+                  &twitter {
+                    background: url(../img/social-twitter.svg);
+                  }
+                }
               }
             }
           }
         }
+        .headerMenu__controls {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100vw;
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          align-items: center;
+          .headerLogo {
+            height: 40px;
+            width: auto;
+            margin: 45px 50px 0 0;
+            cursor: pointer;
+          }
+        }
       }
     }
-    .headerMenu__controls{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      .headerLogo{
-        height: 40px;
-        width: auto;
-        margin: 45px 50px 0 0;
-        cursor: pointer;
+    &.below-the-fold {
+      header {
+        nav {
+          &.headerNav {
+            background-color: $light;
+            padding-bottom: 40px;
+          }
+        }
+      }
+    }
+    &.menu-open {
+      header {
+        nav {
+          &.headerNav {
+            background-color: transparent;
+            padding-bottom: 0;
+          }
+        }
       }
     }
   }
