Adds parameters to script and style requests for cache busting. Adds Gallery class to the body to address horizontal scrollbars on the PC.

--- a/src/sass/_body.scss
+++ b/src/sass/_body.scss
@@ -26,6 +26,10 @@ html {
         fill: black;
       }
     }
+    &.gallery{
+      width: 100%;
+      overflow-x: hidden;
+    }
     div#content {
       position: relative;
       section {
